--- a/HeartOfGold/Views/Item/Edit.cshtml
+++ b/HeartOfGold/Views/Item/Edit.cshtml
@@ -91,6 +91,7 @@
                     @Html.HiddenFor(m => m.Item.Id)
                     @Html.AntiForgeryToken()
                     <div class="col-md-12 center">
+                        <hr style="margin-top:0;" />
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary register-button">Update Donation</button>
                             @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
