--- a/HeartOfGold/Views/Request/ViewRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewRequests.cshtml
@@ -9,15 +9,14 @@
 
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
-@*<div class="center">
+<div class="center">
     <p class="lead" id="Req_Header">STUDENT REQUESTS</p>
     <hr />
-</div>*@
+</div>
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
-            <div class="panel-heading">Search</div>
             <div class="panel body">
                 @using (Html.BeginForm())
                 {
