General code clean-up

--- a/HeartOfGold/Views/Item/Edit.cshtml
+++ b/HeartOfGold/Views/Item/Edit.cshtml
@@ -1,42 +1,14 @@
 ﻿@model HeartOfGold.ViewModels.ItemFormViewModel
 @{
-    /**/
-
     ViewBag.Title = "Edit Donation";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@*<div class="row">
-        <div class="col-md-5 col-sm-5 col-lg-5">
-            <ol class="breadcrumb">
-                <li>
-                    <a href="@Url.Action("Index", "Home")">
-                        <i class="fas fa-home"></i>
-                        &nbsp;Home
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Item")">
-                        <i class="fas fa-th-list"></i>
-                        &nbsp;View Inventory
-                    </a>
-                </li>
-                <li class="active">
-                    <i class="far fa-save"></i>
-                    &nbsp;Edit Donation
-                </li>
-            </ol>
-        </div>
-    </div>*@
-
-
 
 <div class="container center">
     <h3>Edit Donation</h3>
     <hr />
     <p class="lead">Update a donation on the system</p>
 </div>
-
 
 <div class="row">
     <div class="col-lg-5 col-lg-offset-4 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
@@ -68,7 +40,9 @@
                     <div class="col-md-12 col-md-offset-1">
                         <div class="form-group">
                             @Html.LabelFor(m => m.Item.Quantity, new { @class = "bold-text" })
-                            @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control", @placeholder = "Indicate the quantity involved" })
+                            @Html.TextBoxFor(m => m.Item.Quantity, new { @class = "form-control", @placeholder = "Indicate the quantity involved", @id = "qty", @field = "quantity", @name="quantity" })
+                            <input type='button' value='-' field='quantity' onclick="minus()"/>
+                            <input type='button' value='+' field='quantity' onclick="plus()" />
                             @Html.ValidationMessageFor(m => m.Item.Quantity)
                         </div>
                     </div>
@@ -95,7 +69,6 @@
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary register-button">Update Donation</button>
                             @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
-                            @*@Html.ActionLink("Remove", "Remove", "Item", null, new { @class = "btn btn-default", @id = Model.Item.Id })*@
                         </div>
                     </div>
                 }
@@ -110,21 +83,22 @@
 {
     @Scripts.Render("~/bundles/jqueryval")
 
-    @*<script>
-            $(document).ready(function () {
-                $("#inventory .js-delete").on("click", function () {
-                    if (confirm("Are you sure")) {
-                        $.ajax({
-                            url: "/api/donations/" + $(this).attr("data-donation-id"),
-                            method: "POST",
-                            success: function () {
-                                console.log("Success");
-                            }
-                        });
-                    }
-                });
-            });
-        </script>*@
+    <script>
+        var element = document.getElementById("qty");
+        var value = document.getElementById("qty").value;
+
+        function plus() {
+            value++;
+            element.value = value;
+        };
+
+        function minus() {
+            if (value > 0) {
+                value--;
+                element.value = value;
+            };
+        };
+    </script>
 }
 
 
