--- a/HeartOfGold/Views/Home/Index.cshtml
+++ b/HeartOfGold/Views/Home/Index.cshtml
@@ -17,10 +17,10 @@
 </div>
 
 <hr />
-<div class="row">
+<div class="row row-eq-height">
     <div class="col-md-4">
         <div class="panel panel-default home-panel">
-            <h3>For the student</h3>
+            <h4>For the student</h4>
             <p class="lead home-panel-p">
                 Create yourself an account. It's free. Alternatively, browse to the Help and FAQ link at the top of the page to guide you through using the website!
             </p>
@@ -33,42 +33,34 @@
         <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
     </div>*@
     <div class="col-md-4">
-        <div class="panel panel-default home-panel">
-            <h3>Interested in donating?</h3>
+        <div class="panel panel-default home-panel" style="height:200px;">
+            <h4>Interested in donating?</h4>
             <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
         </div>
     </div>
     <div class="col-md-4">
         <div class="panel panel-default home-panel">
-            <h3>Let's make a difference, together.</h3>
+            <h4>Let's make a difference, together.</h4>
             <p class="lead home-panel-p">We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
         </div>
     </div>
-    @*<div class="col-md-4">
-        <i class="fas fa-people-carry home-icons" id="homeLogo3"></i>
-    </div>*@
-</div>
-
-    @*<div class="row">
-        <div class="col-md-4 col-md-offset-2">
-            <i class="fas fa-hands-helping home-icons" id="homeLogo2"></i>
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-default home-panel">
-                <h3>Interested in donating?</h3>
-                <p class="lead home-panel-p">Contact the Heart of Gold administrator by sending an email to admin@hog.co.za.</p>
-            </div>
-        </div>
-</div>
-<div class="row">
-    <div class="col-md-4 col-md-offset-2">
-        <div class="panel panel-default home-panel">
-            <h3>Let's make a difference, together.</h3>
-            <p class="lead home-panel-p">We believe strongly in the philosophy of Ubuntu, we care about those that are disadvantaged. Let's help them out.</p>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <i class="fas fa-people-carry home-icons" id="homeLogo3"></i>
-    </div>
-</div>*@
+ 
+</div>  
 <hr />
+
+@section scripts
+{
+    @if(TempData["RequestLimit"] != null)
+    {
+        <script>
+            $(document).ready(function () {
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true
+                };
+                toastr.warning('You may only have 3 requests open at once.');
+            });
+        </script>
+    }
+
+}
