--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -65,6 +65,10 @@
     {
         <script type="text/javascript">
             $(document).ready(function () {
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true
+                };
                 toastr.success('Successfully added donation item.');
             });
 
@@ -75,6 +79,10 @@
     {
         <script type="text/javascript">
             $(document).ready(function () {
+                toastr.options = {
+                    "closeButton": true,
+                    "progressBar": true
+                };
                 toastr.success('Successfully updated donation item.');
             });
 
