--- a/HeartOfGold/Views/Account/Register.cshtml
+++ b/HeartOfGold/Views/Account/Register.cshtml
@@ -3,55 +3,62 @@
     ViewBag.Title = "Register";
 }
 
-<div class="center">
+<div class="container center">
     <h3>Register</h3>
     <p class="lead">Create a new account</p>
 </div>
 
-<div class="row">
-    <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
-        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <hr id="loginHr"/>
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.UserName, new { @class = "col-md-4 control-label" })
-                <div class="col-md-5">
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+<div class="container center">
+    <p id="registerP">* indicates required fields.</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <hr id="loginHr" />
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.UserName, new { @class = "col-md-4 control-label required" })
+                    <div class="col-md-5">
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.FirstName, new { @class = "col-md-4 control-label" })
-                <div class="col-md-5">
-                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.FirstName, new { @class = "col-md-4 control-label required" })
+                    <div class="col-md-5">
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Surname, new { @class = "col-md-4 control-label" })
-                <div class="col-md-5">
-                    @Html.TextBoxFor(m => m.Surname, new { @class = "form-control" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Surname, new { @class = "col-md-4 control-label required" })
+                    <div class="col-md-5">
+                        @Html.TextBoxFor(m => m.Surname, new { @class = "form-control" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
-                <div class="col-md-5">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label required" })
+                    <div class="col-md-5">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
-                <div class="col-md-5">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label required" })
+                    <div class="col-md-5">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-4 col-md-10 col-xs-offset-3">
-                    <input type="submit" class="btn btn-default register-button" value="Create Account" />
+                <hr />
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10 col-xs-offset-3">
+                        <input type="submit" class="btn btn-default register-button" value="Create Account" />
+                    </div>
                 </div>
-            </div>
-            <hr />
-        }
+            }
+        </div>
     </div>
 </div>
 
